2005-07-22  Raja R Harinath  <rharinath@novell.com>

	* Makefile (MCS): Allow compiler to be overriden.

2005-07-21  Todd Berman  <tberman@off.net>

	* configure: Add a small stub configure (stolen from mcs) to set the
	prefix.
	* mono-cecil.pc.in: Add a mono-cecil.pc.in to allow for installation
	according to the new "Libraries with Unstable API" Wiki documentation.
	* Makefile: Add an install an a mono-cecil.pc target to allow for
	installation and creation of the pc file.

2005-07-14  Jb Evain  <jbevain@gmail.com>

	* CodeGen/templates/ImageReader.cs
	  Mono.Cecil.Binary/IBinaryVisitor.cs
	  Mono.Cecil.Binary/Image.cs
	  Mono.Cecil.Binary/ImageInitializer.cs
	  Mono.Cecil.Binary/Imports.cs
	  Mono.Cecil.Binary/ImageReader.cs:
		Read Imports Tables

2005-07-14  Jb Evain  <jbevain@gmail.com>

	* CodeGen/cecil-gen.rb:
		make codegen works on ruby 1.8.2
	* CodeGen/templates/*.cs
	  Mono.Cecil.Metadata/*.cs:
	  	style

2005-07-13  Jb Evain  <jbevain@gmail.com>

	* Mono.Cecil.Implem/VariableDefinition.cs:
		set the index field

2005-07-13  Jb Evain  <jbevain@gmail.com>

	* Mono.Cecil.dll.sources: regenerated
	* Mono.Cecil.Signatures/SignatureReader.cs:
		Fix compilation warnings
	* Mono.Cecil/IArrayType.cs
	  Mono.Cecil.Implem/ArrayType.cs:
	  	Add Rank helper property
	* Mono.Cecil/ITypeDefinition.cs
	  Mono.Cecil.Implem/TypeDefinition.cs:
	  	Add Constructors helper property

2005-07-11  Jb Evain  <jbevain@gmail.com>

	* Mono.Cecil/IMethod.cs
	  Mono.Cecil.Implem/Instruction.cs
	  Mono.Cecil.Implem/ExceptionHandler.cs
	  Mono.Cecil.Implem/MethodDefinition.cs
	  Mono.Cecil.Implem/Label.cs
	  Mono.Cecil.Implem/CodeReader.cs
	  Mono.Cecil.Implem/MethodBody.cs
	  Mono.Cecil.Implem/CilEmitter.cs
	  Mono.Cecil.Cil/ILabel.cs
	  Mono.Cecil.Cil/IInstruction.cs
	  Mono.Cecil.Cil/IExceptionHandler.cs
	  Mono.Cecil.Cil/IMethodBody.cs
	  Mono.Cecil.Cil/ICilEmitter.cs:
		Preliminary changes on the instruction model before
		changing of latptop
