@@ -39,6 +39,10 @@ namespace Mono.Cecil.Cil {
 				get { return (OpCode) m_cache [name]; }
 			}
 
+			internal IDictionary Dictionary {
+				get { return m_cache; }
+			}
+
 			internal OpCode [] OneByteOpCode {
 				get { return m_oneByteOpCode; }
 			}
@@ -62,13 +66,7 @@ namespace Mono.Cecil.Cil {
 	}
 %>				m_oneByteOpCode = new OpCode [<%=oboc[oboc.length - 1].op2%> + 1];
 				m_twoBytesOpCodes = new OpCode [<%=tboc[tboc.length - 1].op2%> + 1];
-
-<% oboc.each { |op| %>				m_oneByteOpCode [<%=op.op2%>] = OpCodes.<%=op.field_name%>;
-<% }
-   tboc.each { |op| %>				m_twoBytesOpCodes [<%=op.op2%>] = OpCodes.<%=op.field_name%>;
-<% } %>
-<% $ops.each { |op| %>				m_cache ["<%=op.name%>"] = OpCodes.<%=op.field_name%>;
-<% } %>			}
+			}
 		}
 	}
 }
