@@ -9,7 +9,7 @@
  * See LICENSE.MIT file for more details
  *
  * Generated by /CodeGen/cecil-gen.rb do not edit
- * Tue Jul 05 15:48:32 Paris, Madrid 2005
+ * Wed Jul 27 18:17:42 CEST 2005
  *
  *****************************************************************************/
 
@@ -1115,6 +1115,10 @@ namespace Mono.Cecil.Cil {
 				get { return (OpCode) m_cache [name]; }
 			}
 
+			internal IDictionary Dictionary {
+				get { return m_cache; }
+			}
+
 			internal OpCode [] OneByteOpCode {
 				get { return m_oneByteOpCode; }
 			}
@@ -1128,440 +1132,6 @@ namespace Mono.Cecil.Cil {
 				m_cache = new Hashtable ();
 				m_oneByteOpCode = new OpCode [0xe0 + 1];
 				m_twoBytesOpCodes = new OpCode [0x1d + 1];
-
-				m_oneByteOpCode [0x00] = OpCodes.Nop;
-				m_oneByteOpCode [0x01] = OpCodes.Break;
-				m_oneByteOpCode [0x02] = OpCodes.Ldarg_0;
-				m_oneByteOpCode [0x03] = OpCodes.Ldarg_1;
-				m_oneByteOpCode [0x04] = OpCodes.Ldarg_2;
-				m_oneByteOpCode [0x05] = OpCodes.Ldarg_3;
-				m_oneByteOpCode [0x06] = OpCodes.Ldloc_0;
-				m_oneByteOpCode [0x07] = OpCodes.Ldloc_1;
-				m_oneByteOpCode [0x08] = OpCodes.Ldloc_2;
-				m_oneByteOpCode [0x09] = OpCodes.Ldloc_3;
-				m_oneByteOpCode [0x0a] = OpCodes.Stloc_0;
-				m_oneByteOpCode [0x0b] = OpCodes.Stloc_1;
-				m_oneByteOpCode [0x0c] = OpCodes.Stloc_2;
-				m_oneByteOpCode [0x0d] = OpCodes.Stloc_3;
-				m_oneByteOpCode [0x0e] = OpCodes.Ldarg_S;
-				m_oneByteOpCode [0x0f] = OpCodes.Ldarga_S;
-				m_oneByteOpCode [0x10] = OpCodes.Starg_S;
-				m_oneByteOpCode [0x11] = OpCodes.Ldloc_S;
-				m_oneByteOpCode [0x12] = OpCodes.Ldloca_S;
-				m_oneByteOpCode [0x13] = OpCodes.Stloc_S;
-				m_oneByteOpCode [0x14] = OpCodes.Ldnull;
-				m_oneByteOpCode [0x15] = OpCodes.Ldc_I4_M1;
-				m_oneByteOpCode [0x16] = OpCodes.Ldc_I4_0;
-				m_oneByteOpCode [0x17] = OpCodes.Ldc_I4_1;
-				m_oneByteOpCode [0x18] = OpCodes.Ldc_I4_2;
-				m_oneByteOpCode [0x19] = OpCodes.Ldc_I4_3;
-				m_oneByteOpCode [0x1a] = OpCodes.Ldc_I4_4;
-				m_oneByteOpCode [0x1b] = OpCodes.Ldc_I4_5;
-				m_oneByteOpCode [0x1c] = OpCodes.Ldc_I4_6;
-				m_oneByteOpCode [0x1d] = OpCodes.Ldc_I4_7;
-				m_oneByteOpCode [0x1e] = OpCodes.Ldc_I4_8;
-				m_oneByteOpCode [0x1f] = OpCodes.Ldc_I4_S;
-				m_oneByteOpCode [0x20] = OpCodes.Ldc_I4;
-				m_oneByteOpCode [0x21] = OpCodes.Ldc_I8;
-				m_oneByteOpCode [0x22] = OpCodes.Ldc_R4;
-				m_oneByteOpCode [0x23] = OpCodes.Ldc_R8;
-				m_oneByteOpCode [0x25] = OpCodes.Dup;
-				m_oneByteOpCode [0x26] = OpCodes.Pop;
-				m_oneByteOpCode [0x27] = OpCodes.Jmp;
-				m_oneByteOpCode [0x28] = OpCodes.Call;
-				m_oneByteOpCode [0x29] = OpCodes.Calli;
-				m_oneByteOpCode [0x2a] = OpCodes.Ret;
-				m_oneByteOpCode [0x2b] = OpCodes.Br_S;
-				m_oneByteOpCode [0x2c] = OpCodes.Brfalse_S;
-				m_oneByteOpCode [0x2d] = OpCodes.Brtrue_S;
-				m_oneByteOpCode [0x2e] = OpCodes.Beq_S;
-				m_oneByteOpCode [0x2f] = OpCodes.Bge_S;
-				m_oneByteOpCode [0x30] = OpCodes.Bgt_S;
-				m_oneByteOpCode [0x31] = OpCodes.Ble_S;
-				m_oneByteOpCode [0x32] = OpCodes.Blt_S;
-				m_oneByteOpCode [0x33] = OpCodes.Bne_Un_S;
-				m_oneByteOpCode [0x34] = OpCodes.Bge_Un_S;
-				m_oneByteOpCode [0x35] = OpCodes.Bgt_Un_S;
-				m_oneByteOpCode [0x36] = OpCodes.Ble_Un_S;
-				m_oneByteOpCode [0x37] = OpCodes.Blt_Un_S;
-				m_oneByteOpCode [0x38] = OpCodes.Br;
-				m_oneByteOpCode [0x39] = OpCodes.Brfalse;
-				m_oneByteOpCode [0x3a] = OpCodes.Brtrue;
-				m_oneByteOpCode [0x3b] = OpCodes.Beq;
-				m_oneByteOpCode [0x3c] = OpCodes.Bge;
-				m_oneByteOpCode [0x3d] = OpCodes.Bgt;
-				m_oneByteOpCode [0x3e] = OpCodes.Ble;
-				m_oneByteOpCode [0x3f] = OpCodes.Blt;
-				m_oneByteOpCode [0x40] = OpCodes.Bne_Un;
-				m_oneByteOpCode [0x41] = OpCodes.Bge_Un;
-				m_oneByteOpCode [0x42] = OpCodes.Bgt_Un;
-				m_oneByteOpCode [0x43] = OpCodes.Ble_Un;
-				m_oneByteOpCode [0x44] = OpCodes.Blt_Un;
-				m_oneByteOpCode [0x45] = OpCodes.Switch;
-				m_oneByteOpCode [0x46] = OpCodes.Ldind_I1;
-				m_oneByteOpCode [0x47] = OpCodes.Ldind_U1;
-				m_oneByteOpCode [0x48] = OpCodes.Ldind_I2;
-				m_oneByteOpCode [0x49] = OpCodes.Ldind_U2;
-				m_oneByteOpCode [0x4a] = OpCodes.Ldind_I4;
-				m_oneByteOpCode [0x4b] = OpCodes.Ldind_U4;
-				m_oneByteOpCode [0x4c] = OpCodes.Ldind_I8;
-				m_oneByteOpCode [0x4d] = OpCodes.Ldind_I;
-				m_oneByteOpCode [0x4e] = OpCodes.Ldind_R4;
-				m_oneByteOpCode [0x4f] = OpCodes.Ldind_R8;
-				m_oneByteOpCode [0x50] = OpCodes.Ldind_Ref;
-				m_oneByteOpCode [0x51] = OpCodes.Stind_Ref;
-				m_oneByteOpCode [0x52] = OpCodes.Stind_I1;
-				m_oneByteOpCode [0x53] = OpCodes.Stind_I2;
-				m_oneByteOpCode [0x54] = OpCodes.Stind_I4;
-				m_oneByteOpCode [0x55] = OpCodes.Stind_I8;
-				m_oneByteOpCode [0x56] = OpCodes.Stind_R4;
-				m_oneByteOpCode [0x57] = OpCodes.Stind_R8;
-				m_oneByteOpCode [0x58] = OpCodes.Add;
-				m_oneByteOpCode [0x59] = OpCodes.Sub;
-				m_oneByteOpCode [0x5a] = OpCodes.Mul;
-				m_oneByteOpCode [0x5b] = OpCodes.Div;
-				m_oneByteOpCode [0x5c] = OpCodes.Div_Un;
-				m_oneByteOpCode [0x5d] = OpCodes.Rem;
-				m_oneByteOpCode [0x5e] = OpCodes.Rem_Un;
-				m_oneByteOpCode [0x5f] = OpCodes.And;
-				m_oneByteOpCode [0x60] = OpCodes.Or;
-				m_oneByteOpCode [0x61] = OpCodes.Xor;
-				m_oneByteOpCode [0x62] = OpCodes.Shl;
-				m_oneByteOpCode [0x63] = OpCodes.Shr;
-				m_oneByteOpCode [0x64] = OpCodes.Shr_Un;
-				m_oneByteOpCode [0x65] = OpCodes.Neg;
-				m_oneByteOpCode [0x66] = OpCodes.Not;
-				m_oneByteOpCode [0x67] = OpCodes.Conv_I1;
-				m_oneByteOpCode [0x68] = OpCodes.Conv_I2;
-				m_oneByteOpCode [0x69] = OpCodes.Conv_I4;
-				m_oneByteOpCode [0x6a] = OpCodes.Conv_I8;
-				m_oneByteOpCode [0x6b] = OpCodes.Conv_R4;
-				m_oneByteOpCode [0x6c] = OpCodes.Conv_R8;
-				m_oneByteOpCode [0x6d] = OpCodes.Conv_U4;
-				m_oneByteOpCode [0x6e] = OpCodes.Conv_U8;
-				m_oneByteOpCode [0x6f] = OpCodes.Callvirt;
-				m_oneByteOpCode [0x70] = OpCodes.Cpobj;
-				m_oneByteOpCode [0x71] = OpCodes.Ldobj;
-				m_oneByteOpCode [0x72] = OpCodes.Ldstr;
-				m_oneByteOpCode [0x73] = OpCodes.Newobj;
-				m_oneByteOpCode [0x74] = OpCodes.Castclass;
-				m_oneByteOpCode [0x75] = OpCodes.Isinst;
-				m_oneByteOpCode [0x76] = OpCodes.Conv_R_Un;
-				m_oneByteOpCode [0x79] = OpCodes.Unbox;
-				m_oneByteOpCode [0x7a] = OpCodes.Throw;
-				m_oneByteOpCode [0x7b] = OpCodes.Ldfld;
-				m_oneByteOpCode [0x7c] = OpCodes.Ldflda;
-				m_oneByteOpCode [0x7d] = OpCodes.Stfld;
-				m_oneByteOpCode [0x7e] = OpCodes.Ldsfld;
-				m_oneByteOpCode [0x7f] = OpCodes.Ldsflda;
-				m_oneByteOpCode [0x80] = OpCodes.Stsfld;
-				m_oneByteOpCode [0x81] = OpCodes.Stobj;
-				m_oneByteOpCode [0x82] = OpCodes.Conv_Ovf_I1_Un;
-				m_oneByteOpCode [0x83] = OpCodes.Conv_Ovf_I2_Un;
-				m_oneByteOpCode [0x84] = OpCodes.Conv_Ovf_I4_Un;
-				m_oneByteOpCode [0x85] = OpCodes.Conv_Ovf_I8_Un;
-				m_oneByteOpCode [0x86] = OpCodes.Conv_Ovf_U1_Un;
-				m_oneByteOpCode [0x87] = OpCodes.Conv_Ovf_U2_Un;
-				m_oneByteOpCode [0x88] = OpCodes.Conv_Ovf_U4_Un;
-				m_oneByteOpCode [0x89] = OpCodes.Conv_Ovf_U8_Un;
-				m_oneByteOpCode [0x8a] = OpCodes.Conv_Ovf_I_Un;
-				m_oneByteOpCode [0x8b] = OpCodes.Conv_Ovf_U_Un;
-				m_oneByteOpCode [0x8c] = OpCodes.Box;
-				m_oneByteOpCode [0x8d] = OpCodes.Newarr;
-				m_oneByteOpCode [0x8e] = OpCodes.Ldlen;
-				m_oneByteOpCode [0x8f] = OpCodes.Ldelema;
-				m_oneByteOpCode [0x90] = OpCodes.Ldelem_I1;
-				m_oneByteOpCode [0x91] = OpCodes.Ldelem_U1;
-				m_oneByteOpCode [0x92] = OpCodes.Ldelem_I2;
-				m_oneByteOpCode [0x93] = OpCodes.Ldelem_U2;
-				m_oneByteOpCode [0x94] = OpCodes.Ldelem_I4;
-				m_oneByteOpCode [0x95] = OpCodes.Ldelem_U4;
-				m_oneByteOpCode [0x96] = OpCodes.Ldelem_I8;
-				m_oneByteOpCode [0x97] = OpCodes.Ldelem_I;
-				m_oneByteOpCode [0x98] = OpCodes.Ldelem_R4;
-				m_oneByteOpCode [0x99] = OpCodes.Ldelem_R8;
-				m_oneByteOpCode [0x9a] = OpCodes.Ldelem_Ref;
-				m_oneByteOpCode [0x9b] = OpCodes.Stelem_I;
-				m_oneByteOpCode [0x9c] = OpCodes.Stelem_I1;
-				m_oneByteOpCode [0x9d] = OpCodes.Stelem_I2;
-				m_oneByteOpCode [0x9e] = OpCodes.Stelem_I4;
-				m_oneByteOpCode [0x9f] = OpCodes.Stelem_I8;
-				m_oneByteOpCode [0xa0] = OpCodes.Stelem_R4;
-				m_oneByteOpCode [0xa1] = OpCodes.Stelem_R8;
-				m_oneByteOpCode [0xa2] = OpCodes.Stelem_Ref;
-				m_oneByteOpCode [0xa3] = OpCodes.Ldelem_Any;
-				m_oneByteOpCode [0xa4] = OpCodes.Stelem_Any;
-				m_oneByteOpCode [0xa5] = OpCodes.Unbox_Any;
-				m_oneByteOpCode [0xb3] = OpCodes.Conv_Ovf_I1;
-				m_oneByteOpCode [0xb4] = OpCodes.Conv_Ovf_U1;
-				m_oneByteOpCode [0xb5] = OpCodes.Conv_Ovf_I2;
-				m_oneByteOpCode [0xb6] = OpCodes.Conv_Ovf_U2;
-				m_oneByteOpCode [0xb7] = OpCodes.Conv_Ovf_I4;
-				m_oneByteOpCode [0xb8] = OpCodes.Conv_Ovf_U4;
-				m_oneByteOpCode [0xb9] = OpCodes.Conv_Ovf_I8;
-				m_oneByteOpCode [0xba] = OpCodes.Conv_Ovf_U8;
-				m_oneByteOpCode [0xc2] = OpCodes.Refanyval;
-				m_oneByteOpCode [0xc3] = OpCodes.Ckfinite;
-				m_oneByteOpCode [0xc6] = OpCodes.Mkrefany;
-				m_oneByteOpCode [0xd0] = OpCodes.Ldtoken;
-				m_oneByteOpCode [0xd1] = OpCodes.Conv_U2;
-				m_oneByteOpCode [0xd2] = OpCodes.Conv_U1;
-				m_oneByteOpCode [0xd3] = OpCodes.Conv_I;
-				m_oneByteOpCode [0xd4] = OpCodes.Conv_Ovf_I;
-				m_oneByteOpCode [0xd5] = OpCodes.Conv_Ovf_U;
-				m_oneByteOpCode [0xd6] = OpCodes.Add_Ovf;
-				m_oneByteOpCode [0xd7] = OpCodes.Add_Ovf_Un;
-				m_oneByteOpCode [0xd8] = OpCodes.Mul_Ovf;
-				m_oneByteOpCode [0xd9] = OpCodes.Mul_Ovf_Un;
-				m_oneByteOpCode [0xda] = OpCodes.Sub_Ovf;
-				m_oneByteOpCode [0xdb] = OpCodes.Sub_Ovf_Un;
-				m_oneByteOpCode [0xdc] = OpCodes.Endfinally;
-				m_oneByteOpCode [0xdd] = OpCodes.Leave;
-				m_oneByteOpCode [0xde] = OpCodes.Leave_S;
-				m_oneByteOpCode [0xdf] = OpCodes.Stind_I;
-				m_oneByteOpCode [0xe0] = OpCodes.Conv_U;
-				m_twoBytesOpCodes [0x00] = OpCodes.Arglist;
-				m_twoBytesOpCodes [0x01] = OpCodes.Ceq;
-				m_twoBytesOpCodes [0x02] = OpCodes.Cgt;
-				m_twoBytesOpCodes [0x03] = OpCodes.Cgt_Un;
-				m_twoBytesOpCodes [0x04] = OpCodes.Clt;
-				m_twoBytesOpCodes [0x05] = OpCodes.Clt_Un;
-				m_twoBytesOpCodes [0x06] = OpCodes.Ldftn;
-				m_twoBytesOpCodes [0x07] = OpCodes.Ldvirtftn;
-				m_twoBytesOpCodes [0x09] = OpCodes.Ldarg;
-				m_twoBytesOpCodes [0x0a] = OpCodes.Ldarga;
-				m_twoBytesOpCodes [0x0b] = OpCodes.Starg;
-				m_twoBytesOpCodes [0x0c] = OpCodes.Ldloc;
-				m_twoBytesOpCodes [0x0d] = OpCodes.Ldloca;
-				m_twoBytesOpCodes [0x0e] = OpCodes.Stloc;
-				m_twoBytesOpCodes [0x0f] = OpCodes.Localloc;
-				m_twoBytesOpCodes [0x11] = OpCodes.Endfilter;
-				m_twoBytesOpCodes [0x12] = OpCodes.Unaligned;
-				m_twoBytesOpCodes [0x13] = OpCodes.Volatile;
-				m_twoBytesOpCodes [0x14] = OpCodes.Tail;
-				m_twoBytesOpCodes [0x15] = OpCodes.Initobj;
-				m_twoBytesOpCodes [0x17] = OpCodes.Cpblk;
-				m_twoBytesOpCodes [0x18] = OpCodes.Initblk;
-				m_twoBytesOpCodes [0x1a] = OpCodes.Rethrow;
-				m_twoBytesOpCodes [0x1c] = OpCodes.Sizeof;
-				m_twoBytesOpCodes [0x1d] = OpCodes.Refanytype;
-
-				m_cache ["nop"] = OpCodes.Nop;
-				m_cache ["break"] = OpCodes.Break;
-				m_cache ["ldarg.0"] = OpCodes.Ldarg_0;
-				m_cache ["ldarg.1"] = OpCodes.Ldarg_1;
-				m_cache ["ldarg.2"] = OpCodes.Ldarg_2;
-				m_cache ["ldarg.3"] = OpCodes.Ldarg_3;
-				m_cache ["ldloc.0"] = OpCodes.Ldloc_0;
-				m_cache ["ldloc.1"] = OpCodes.Ldloc_1;
-				m_cache ["ldloc.2"] = OpCodes.Ldloc_2;
-				m_cache ["ldloc.3"] = OpCodes.Ldloc_3;
-				m_cache ["stloc.0"] = OpCodes.Stloc_0;
-				m_cache ["stloc.1"] = OpCodes.Stloc_1;
-				m_cache ["stloc.2"] = OpCodes.Stloc_2;
-				m_cache ["stloc.3"] = OpCodes.Stloc_3;
-				m_cache ["ldarg.s"] = OpCodes.Ldarg_S;
-				m_cache ["ldarga.s"] = OpCodes.Ldarga_S;
-				m_cache ["starg.s"] = OpCodes.Starg_S;
-				m_cache ["ldloc.s"] = OpCodes.Ldloc_S;
-				m_cache ["ldloca.s"] = OpCodes.Ldloca_S;
-				m_cache ["stloc.s"] = OpCodes.Stloc_S;
-				m_cache ["ldnull"] = OpCodes.Ldnull;
-				m_cache ["ldc.i4.m1"] = OpCodes.Ldc_I4_M1;
-				m_cache ["ldc.i4.0"] = OpCodes.Ldc_I4_0;
-				m_cache ["ldc.i4.1"] = OpCodes.Ldc_I4_1;
-				m_cache ["ldc.i4.2"] = OpCodes.Ldc_I4_2;
-				m_cache ["ldc.i4.3"] = OpCodes.Ldc_I4_3;
-				m_cache ["ldc.i4.4"] = OpCodes.Ldc_I4_4;
-				m_cache ["ldc.i4.5"] = OpCodes.Ldc_I4_5;
-				m_cache ["ldc.i4.6"] = OpCodes.Ldc_I4_6;
-				m_cache ["ldc.i4.7"] = OpCodes.Ldc_I4_7;
-				m_cache ["ldc.i4.8"] = OpCodes.Ldc_I4_8;
-				m_cache ["ldc.i4.s"] = OpCodes.Ldc_I4_S;
-				m_cache ["ldc.i4"] = OpCodes.Ldc_I4;
-				m_cache ["ldc.i8"] = OpCodes.Ldc_I8;
-				m_cache ["ldc.r4"] = OpCodes.Ldc_R4;
-				m_cache ["ldc.r8"] = OpCodes.Ldc_R8;
-				m_cache ["dup"] = OpCodes.Dup;
-				m_cache ["pop"] = OpCodes.Pop;
-				m_cache ["jmp"] = OpCodes.Jmp;
-				m_cache ["call"] = OpCodes.Call;
-				m_cache ["calli"] = OpCodes.Calli;
-				m_cache ["ret"] = OpCodes.Ret;
-				m_cache ["br.s"] = OpCodes.Br_S;
-				m_cache ["brfalse.s"] = OpCodes.Brfalse_S;
-				m_cache ["brtrue.s"] = OpCodes.Brtrue_S;
-				m_cache ["beq.s"] = OpCodes.Beq_S;
-				m_cache ["bge.s"] = OpCodes.Bge_S;
-				m_cache ["bgt.s"] = OpCodes.Bgt_S;
-				m_cache ["ble.s"] = OpCodes.Ble_S;
-				m_cache ["blt.s"] = OpCodes.Blt_S;
-				m_cache ["bne.un.s"] = OpCodes.Bne_Un_S;
-				m_cache ["bge.un.s"] = OpCodes.Bge_Un_S;
-				m_cache ["bgt.un.s"] = OpCodes.Bgt_Un_S;
-				m_cache ["ble.un.s"] = OpCodes.Ble_Un_S;
-				m_cache ["blt.un.s"] = OpCodes.Blt_Un_S;
-				m_cache ["br"] = OpCodes.Br;
-				m_cache ["brfalse"] = OpCodes.Brfalse;
-				m_cache ["brtrue"] = OpCodes.Brtrue;
-				m_cache ["beq"] = OpCodes.Beq;
-				m_cache ["bge"] = OpCodes.Bge;
-				m_cache ["bgt"] = OpCodes.Bgt;
-				m_cache ["ble"] = OpCodes.Ble;
-				m_cache ["blt"] = OpCodes.Blt;
-				m_cache ["bne.un"] = OpCodes.Bne_Un;
-				m_cache ["bge.un"] = OpCodes.Bge_Un;
-				m_cache ["bgt.un"] = OpCodes.Bgt_Un;
-				m_cache ["ble.un"] = OpCodes.Ble_Un;
-				m_cache ["blt.un"] = OpCodes.Blt_Un;
-				m_cache ["switch"] = OpCodes.Switch;
-				m_cache ["ldind.i1"] = OpCodes.Ldind_I1;
-				m_cache ["ldind.u1"] = OpCodes.Ldind_U1;
-				m_cache ["ldind.i2"] = OpCodes.Ldind_I2;
-				m_cache ["ldind.u2"] = OpCodes.Ldind_U2;
-				m_cache ["ldind.i4"] = OpCodes.Ldind_I4;
-				m_cache ["ldind.u4"] = OpCodes.Ldind_U4;
-				m_cache ["ldind.i8"] = OpCodes.Ldind_I8;
-				m_cache ["ldind.i"] = OpCodes.Ldind_I;
-				m_cache ["ldind.r4"] = OpCodes.Ldind_R4;
-				m_cache ["ldind.r8"] = OpCodes.Ldind_R8;
-				m_cache ["ldind.ref"] = OpCodes.Ldind_Ref;
-				m_cache ["stind.ref"] = OpCodes.Stind_Ref;
-				m_cache ["stind.i1"] = OpCodes.Stind_I1;
-				m_cache ["stind.i2"] = OpCodes.Stind_I2;
-				m_cache ["stind.i4"] = OpCodes.Stind_I4;
-				m_cache ["stind.i8"] = OpCodes.Stind_I8;
-				m_cache ["stind.r4"] = OpCodes.Stind_R4;
-				m_cache ["stind.r8"] = OpCodes.Stind_R8;
-				m_cache ["add"] = OpCodes.Add;
-				m_cache ["sub"] = OpCodes.Sub;
-				m_cache ["mul"] = OpCodes.Mul;
-				m_cache ["div"] = OpCodes.Div;
-				m_cache ["div.un"] = OpCodes.Div_Un;
-				m_cache ["rem"] = OpCodes.Rem;
-				m_cache ["rem.un"] = OpCodes.Rem_Un;
-				m_cache ["and"] = OpCodes.And;
-				m_cache ["or"] = OpCodes.Or;
-				m_cache ["xor"] = OpCodes.Xor;
-				m_cache ["shl"] = OpCodes.Shl;
-				m_cache ["shr"] = OpCodes.Shr;
-				m_cache ["shr.un"] = OpCodes.Shr_Un;
-				m_cache ["neg"] = OpCodes.Neg;
-				m_cache ["not"] = OpCodes.Not;
-				m_cache ["conv.i1"] = OpCodes.Conv_I1;
-				m_cache ["conv.i2"] = OpCodes.Conv_I2;
-				m_cache ["conv.i4"] = OpCodes.Conv_I4;
-				m_cache ["conv.i8"] = OpCodes.Conv_I8;
-				m_cache ["conv.r4"] = OpCodes.Conv_R4;
-				m_cache ["conv.r8"] = OpCodes.Conv_R8;
-				m_cache ["conv.u4"] = OpCodes.Conv_U4;
-				m_cache ["conv.u8"] = OpCodes.Conv_U8;
-				m_cache ["callvirt"] = OpCodes.Callvirt;
-				m_cache ["cpobj"] = OpCodes.Cpobj;
-				m_cache ["ldobj"] = OpCodes.Ldobj;
-				m_cache ["ldstr"] = OpCodes.Ldstr;
-				m_cache ["newobj"] = OpCodes.Newobj;
-				m_cache ["castclass"] = OpCodes.Castclass;
-				m_cache ["isinst"] = OpCodes.Isinst;
-				m_cache ["conv.r.un"] = OpCodes.Conv_R_Un;
-				m_cache ["unbox"] = OpCodes.Unbox;
-				m_cache ["throw"] = OpCodes.Throw;
-				m_cache ["ldfld"] = OpCodes.Ldfld;
-				m_cache ["ldflda"] = OpCodes.Ldflda;
-				m_cache ["stfld"] = OpCodes.Stfld;
-				m_cache ["ldsfld"] = OpCodes.Ldsfld;
-				m_cache ["ldsflda"] = OpCodes.Ldsflda;
-				m_cache ["stsfld"] = OpCodes.Stsfld;
-				m_cache ["stobj"] = OpCodes.Stobj;
-				m_cache ["conv.ovf.i1.un"] = OpCodes.Conv_Ovf_I1_Un;
-				m_cache ["conv.ovf.i2.un"] = OpCodes.Conv_Ovf_I2_Un;
-				m_cache ["conv.ovf.i4.un"] = OpCodes.Conv_Ovf_I4_Un;
-				m_cache ["conv.ovf.i8.un"] = OpCodes.Conv_Ovf_I8_Un;
-				m_cache ["conv.ovf.u1.un"] = OpCodes.Conv_Ovf_U1_Un;
-				m_cache ["conv.ovf.u2.un"] = OpCodes.Conv_Ovf_U2_Un;
-				m_cache ["conv.ovf.u4.un"] = OpCodes.Conv_Ovf_U4_Un;
-				m_cache ["conv.ovf.u8.un"] = OpCodes.Conv_Ovf_U8_Un;
-				m_cache ["conv.ovf.i.un"] = OpCodes.Conv_Ovf_I_Un;
-				m_cache ["conv.ovf.u.un"] = OpCodes.Conv_Ovf_U_Un;
-				m_cache ["box"] = OpCodes.Box;
-				m_cache ["newarr"] = OpCodes.Newarr;
-				m_cache ["ldlen"] = OpCodes.Ldlen;
-				m_cache ["ldelema"] = OpCodes.Ldelema;
-				m_cache ["ldelem.i1"] = OpCodes.Ldelem_I1;
-				m_cache ["ldelem.u1"] = OpCodes.Ldelem_U1;
-				m_cache ["ldelem.i2"] = OpCodes.Ldelem_I2;
-				m_cache ["ldelem.u2"] = OpCodes.Ldelem_U2;
-				m_cache ["ldelem.i4"] = OpCodes.Ldelem_I4;
-				m_cache ["ldelem.u4"] = OpCodes.Ldelem_U4;
-				m_cache ["ldelem.i8"] = OpCodes.Ldelem_I8;
-				m_cache ["ldelem.i"] = OpCodes.Ldelem_I;
-				m_cache ["ldelem.r4"] = OpCodes.Ldelem_R4;
-				m_cache ["ldelem.r8"] = OpCodes.Ldelem_R8;
-				m_cache ["ldelem.ref"] = OpCodes.Ldelem_Ref;
-				m_cache ["stelem.i"] = OpCodes.Stelem_I;
-				m_cache ["stelem.i1"] = OpCodes.Stelem_I1;
-				m_cache ["stelem.i2"] = OpCodes.Stelem_I2;
-				m_cache ["stelem.i4"] = OpCodes.Stelem_I4;
-				m_cache ["stelem.i8"] = OpCodes.Stelem_I8;
-				m_cache ["stelem.r4"] = OpCodes.Stelem_R4;
-				m_cache ["stelem.r8"] = OpCodes.Stelem_R8;
-				m_cache ["stelem.ref"] = OpCodes.Stelem_Ref;
-				m_cache ["ldelem.any"] = OpCodes.Ldelem_Any;
-				m_cache ["stelem.any"] = OpCodes.Stelem_Any;
-				m_cache ["unbox.any"] = OpCodes.Unbox_Any;
-				m_cache ["conv.ovf.i1"] = OpCodes.Conv_Ovf_I1;
-				m_cache ["conv.ovf.u1"] = OpCodes.Conv_Ovf_U1;
-				m_cache ["conv.ovf.i2"] = OpCodes.Conv_Ovf_I2;
-				m_cache ["conv.ovf.u2"] = OpCodes.Conv_Ovf_U2;
-				m_cache ["conv.ovf.i4"] = OpCodes.Conv_Ovf_I4;
-				m_cache ["conv.ovf.u4"] = OpCodes.Conv_Ovf_U4;
-				m_cache ["conv.ovf.i8"] = OpCodes.Conv_Ovf_I8;
-				m_cache ["conv.ovf.u8"] = OpCodes.Conv_Ovf_U8;
-				m_cache ["refanyval"] = OpCodes.Refanyval;
-				m_cache ["ckfinite"] = OpCodes.Ckfinite;
-				m_cache ["mkrefany"] = OpCodes.Mkrefany;
-				m_cache ["ldtoken"] = OpCodes.Ldtoken;
-				m_cache ["conv.u2"] = OpCodes.Conv_U2;
-				m_cache ["conv.u1"] = OpCodes.Conv_U1;
-				m_cache ["conv.i"] = OpCodes.Conv_I;
-				m_cache ["conv.ovf.i"] = OpCodes.Conv_Ovf_I;
-				m_cache ["conv.ovf.u"] = OpCodes.Conv_Ovf_U;
-				m_cache ["add.ovf"] = OpCodes.Add_Ovf;
-				m_cache ["add.ovf.un"] = OpCodes.Add_Ovf_Un;
-				m_cache ["mul.ovf"] = OpCodes.Mul_Ovf;
-				m_cache ["mul.ovf.un"] = OpCodes.Mul_Ovf_Un;
-				m_cache ["sub.ovf"] = OpCodes.Sub_Ovf;
-				m_cache ["sub.ovf.un"] = OpCodes.Sub_Ovf_Un;
-				m_cache ["endfinally"] = OpCodes.Endfinally;
-				m_cache ["leave"] = OpCodes.Leave;
-				m_cache ["leave.s"] = OpCodes.Leave_S;
-				m_cache ["stind.i"] = OpCodes.Stind_I;
-				m_cache ["conv.u"] = OpCodes.Conv_U;
-				m_cache ["arglist"] = OpCodes.Arglist;
-				m_cache ["ceq"] = OpCodes.Ceq;
-				m_cache ["cgt"] = OpCodes.Cgt;
-				m_cache ["cgt.un"] = OpCodes.Cgt_Un;
-				m_cache ["clt"] = OpCodes.Clt;
-				m_cache ["clt.un"] = OpCodes.Clt_Un;
-				m_cache ["ldftn"] = OpCodes.Ldftn;
-				m_cache ["ldvirtftn"] = OpCodes.Ldvirtftn;
-				m_cache ["ldarg"] = OpCodes.Ldarg;
-				m_cache ["ldarga"] = OpCodes.Ldarga;
-				m_cache ["starg"] = OpCodes.Starg;
-				m_cache ["ldloc"] = OpCodes.Ldloc;
-				m_cache ["ldloca"] = OpCodes.Ldloca;
-				m_cache ["stloc"] = OpCodes.Stloc;
-				m_cache ["localloc"] = OpCodes.Localloc;
-				m_cache ["endfilter"] = OpCodes.Endfilter;
-				m_cache ["unaligned."] = OpCodes.Unaligned;
-				m_cache ["volatile."] = OpCodes.Volatile;
-				m_cache ["tail."] = OpCodes.Tail;
-				m_cache ["initobj"] = OpCodes.Initobj;
-				m_cache ["cpblk"] = OpCodes.Cpblk;
-				m_cache ["initblk"] = OpCodes.Initblk;
-				m_cache ["rethrow"] = OpCodes.Rethrow;
-				m_cache ["sizeof"] = OpCodes.Sizeof;
-				m_cache ["refanytype"] = OpCodes.Refanytype;
 			}
 		}
 	}
